--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Производство — Трекер задач</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 </head>
 <body>
   <div class="container">
     <aside class="sidebar">
       <h2>Участки</h2>
       <ul id="stations-list"></ul>
+      <button id="admin-btn" style="margin-top: 20px; width: 100%;">Админка</button>
     </aside>
 
     <main class="main-content">
