--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
           <input type="text" id="new-station" placeholder="Новый участок" />
           <button id="add-station">Добавить</button>
         </div>
+        
+        <!-- Выбор эмодзи (только для премиум-оператора) -->
+        <div id="emoji-selector" style="display: none; margin-top: 16px;">
+          <div>Выберите значок:</div>
+          <div class="emoji-options">
+            <span data-emoji="🌟">🌟</span>
+            <span data-emoji="🔥">🔥</span>
+            <span data-emoji="💎">💎</span>
+            <span data-emoji="🚀">🚀</span>
+          </div>
+        </div>
       </aside>
 
       <main class="main-content">
