--- a/index.html
+++ b/index.html
@@ -46,21 +46,23 @@
       <main class="main-content">
         <div class="header">
           <div class="header-left">
-            <button id="add-order">добавить</button>
-            <input type="text" id="search-input" placeholder="поиск по №" />
-            <select id="position-filter">
-              <option value="">Все</option>
-              <option value="внутренняя панель">Внутренняя панель</option>
-              <option value="наружная панель">Наружная панель</option>
-              <option value="наличники">Наличники</option>
-              <option value="откосы">Откосы</option>
-              <option value="фрамуга">Фрамуга</option>
-              <option value="импосты">Импосты</option>
-              <option value="полотна">Полотна</option>
-              <option value="коробки">Коробки</option>
-              <option value="фасады">Фасады</option>
-            </select>
-          </div>
+  <button id="add-order">добавить</button>
+  <input type="text" id="search-input" placeholder="поиск по №" />
+  <div class="position-filter-wrapper">
+    <select id="position-filter">
+      <option value="">Все</option>
+      <option value="внутренняя панель">Внутренняя панель</option>
+      <option value="наружная панель">Наружная панель</option>
+      <option value="наличники">Наличники</option>
+      <option value="откосы">Откосы</option>
+      <option value="фрамуга">Фрамуга</option>
+      <option value="импосты">Импосты</option>
+      <option value="полотна">Полотна</option>
+      <option value="коробки">Коробки</option>
+      <option value="фасады">Фасады</option>
+    </select>
+  </div>
+</div>
           <div class="header-right">
             <div class="app-title">ZyNymbo</div>
           </div>
