--- a/index.html
+++ b/index.html
@@ -2,54 +2,55 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Личный кабинет оператора</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ZyNymbo — Трекер задач</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="manifest" href="manifest.json" />
-  <link rel="icon" type="image/png" href="icon-192.png" />
+  <!-- Supabase SDK — исправленная версия -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.41.1"></script>
 </head>
 <body>
-  <div class="container">
-    <h1>Личный кабинет оператора</h1>
-
-    <input type="text" id="search-input" placeholder="Поиск по номеру заказа" />
-
-    <div class="form">
-      <label for="order-number">Номер заказа:</label>
-      <input type="text" id="order-number" placeholder="Номер заказа" />
-
-      <label for="item-type">Тип изделия:</label>
-      <select id="item-type">
-        <option value="наружняя панель">наружняя панель</option>
-        <option value="внутренняя панель">внутренняя панель</option>
-        <option value="откосы">откосы</option>
-        <option value="наличники">наличники</option>
-        <option value="внутренние наличники">внутренние наличники</option>
-        <option value="импасы">импасы</option>
-        <option value="фрумуги">фрумуги</option>
-        <option value="упаковка">упаковка</option>
-      </select>
-
-      <label for="workstation">Рабочая станция:</label>
-      <select id="workstation">
-        <option value="распил">распил</option>
-        <option value="чпу">чпу</option>
-        <option value="фанеровка">фанеровка</option>
-        <option value="шлифовка">шлифовка</option>
-        <option value="сборка">сборка</option>
-        <option value="покраска">покраска</option>
-        <option value="пвх">пвх</option>
-        <option value="упаковка">упаковка</option>
-      </select>
-
-      <button id="create-btn" aria-label="Добавить заказ">+</button>
+  <!-- Экран входа -->
+  <div id="login-screen" class="auth-screen">
+    <div class="auth-form">
+      <h2>Вход в систему</h2>
+      <input type="password" id="login-password" placeholder="Пароль" />
+      <button id="login-btn">Войти</button>
+      <p id="login-error" style="color: red; margin-top: 8px; display: none;"></p>
     </div>
-
-    <div id="items-list"></div>
   </div>
 
-  <!-- Supabase SDK -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.41.1/dist/umd/supabase.min.js?module"></script>
-  <script defer src="script.js"></script>
+  <!-- Основное приложение -->
+  <div id="app" style="display: none;">
+    <div class="container">
+      <aside class="sidebar">
+        <div class="user-role" id="user-role">Оператор</div>
+        <button id="logout-btn" style="margin-top: 8px; padding: 6px; font-size: 12px;">Выйти</button>
+        <h2>Участки</h2>
+        <ul id="stations-list"></ul>
+        <div id="admin-controls" style="display: none;">
+          <input type="text" id="new-station" placeholder="Новый участок" />
+          <button id="add-station">Добавить</button>
+        </div>
+      </aside>
+
+      <main class="main-content">
+        <div class="header">
+          <div class="header-left">
+            <input type="text" id="order-input" placeholder="номер заказа" />
+            <button id="add-order">добавить</button>
+            <input type="text" id="search-input" placeholder="поиск по №" />
+          </div>
+          <div class="header-right">
+            <div class="app-title">ZyNymbo</div>
+          </div>
+        </div>
+        <div class="orders-wrapper">
+          <div id="orders-container" class="orders-container"></div>
+        </div>
+      </main>
+    </div>
+  </div>
+
+  <script src="main.js"></script>
 </body>
 </html>
