--- a/index.html
+++ b/index.html
@@ -261,22 +261,30 @@
       border-radius: 8px;
       position: relative;
     }
+    /* МАЛЕНЬКАЯ СЕРАЯ КНОПКА УДАЛЕНИЯ */
     .detail-row .remove-btn {
       position: absolute;
-      top: 4px;
-      right: 4px;
-      background: #f44336;
-      color: white;
+      top: 8px;
+      right: 8px;
+      background: #e0e0e0;
+      color: #757575;
       border: none;
-      width: 24px;
-      height: 24px;
+      width: 20px;
+      height: 20px;
       border-radius: 50%;
-      font-size: 14px;
+      font-size: 12px;
       cursor: pointer;
       display: flex;
       align-items: center;
       justify-content: center;
+      font-weight: bold;
+      padding: 0;
+      line-height: 1;
     }
+    .detail-row .remove-btn:hover {
+      background: #d0d0d0;
+    }
+
     .add-detail-btn {
       background: #e3f2fd;
       color: var(--accent-blue);
